[gd_scene load_steps=4 format=3 uid="uid://both_dimensions_test"]

[ext_resource type="Script" path="res://examples/BothDimensionsTest.gd" id="1_test_script"]
[ext_resource type="PackedScene" uid="uid://b8x7y6z5w4v3u" path="res://actors/Player.tscn" id="2_player"]
[ext_resource type="PackedScene" uid="uid://bvq8x7y2n8wqr" path="res://actors/HintArea.tscn" id="3_hint_area"]

[node name="BothDimensionsTest" type="Node2D"]
script = ExtResource("1_test_script")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.1, 0.1, 0.2, 1)

[node name="Player" parent="." instance=ExtResource("2_player")]
position = Vector2(640, 360)

[node name="BothDimensionsHint" parent="." instance=ExtResource("3_hint_area")]
position = Vector2(640, 360)
hint_message = "This appears in BOTH dimensions!"
hint_title = "Universal Hint"
target_layer = "Both"

[node name="DimensionAHint" parent="." instance=ExtResource("3_hint_area")]
position = Vector2(500, 360)
hint_message = "Dimension A only"
hint_title = "A Only"
target_layer = "A"

[node name="DimensionBHint" parent="." instance=ExtResource("3_hint_area")]
position = Vector2(780, 360)
hint_message = "Dimension B only"
hint_title = "B Only"
target_layer = "B"